# maui-samples

./: .gitignore  CODE_OF_CONDUCT.md  Directory.Android.targets  Directory.Build.targets  Directory.iOS.targets  LiveActivityDemo.sln  NuGet.config  README.md  SimpleChatClient.sln  azdo_mac.yml  azdo_windows.yml  azure-pipelines-rusha-shah.yml  azure-pipelines.yml  global.json  net5-samples.sln  net6-samples.sln  nuget.config  quest-config.json
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/skills/appium-automation/: SKILL.md  pyproject.toml
.github/skills/appium-automation/scripts/: automate.py
10.0/: global.json
11.0/: Directory.Build.props  global.json
6.0/: global.json
HelloAndroid/: HelloAndroid.csproj  MainActivity.cs
HelloForms/: App.xaml.cs  Directory.Build.props  HelloForms.csproj  MainPage.xaml.cs
HelloForms.Android/: HelloForms.Android.csproj  MainActivity.cs
HelloForms.Droid/: HelloForms.Droid.csproj  MainActivity.cs
HelloForms.iOS/: AppDelegate.cs  HelloForms.iOS.csproj  Info.plist
HelloMacCatalyst/: AppDelegate.cs  HelloMacCatalyst.csproj  Info.plist
HelloMacOS/: AppDelegate.cs  HelloMacOS.csproj  Info.plist  Main.storyboard  ViewController.cs
HelloMaui/: App.xaml  App.xaml.cs  Application.cs  Directory.Build.targets  HelloMaui.csproj  MainPage.xaml  MainPage.xaml.cs  MainWindow.cs  Startup.cs
HelloMauiWinUI3/: HelloMauiWinUI3.sln
HelloWinUI3/: HelloWinUI3.sln
HelloiOS/: AppDelegate.cs  HelloiOS.csproj  Info.plist
HelloiOSFSharp/: HelloiOSFSharp.fsproj
Upgrading/: README.md
archive/: global.json  (+2 more)
(+5419 files in other folders)
